Found out more spacing issue and fixed it

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -376,7 +376,7 @@ body {
   justify-content: space-around;
   align-items: flex-start;
   width: 100%;
-  padding-bottom: 1.5rem;
+  padding: 1.5rem 0;
   border-bottom: 2px solid rgba(225, 225, 225, 0.79);
 }
 @media (min-width: 768px) {
